--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "dcb",
   "version": "0.0.0",
+  "engines": {
+    "node": "6.11.0",
+    "npm": "3.10.10"
+  },
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
