--- a/package.json
+++ b/package.json
@@ -1,48 +1,38 @@
 {
   "name": "dcb",
   "version": "0.0.0",
-  "engines": {
-    "node": "10.15.3",
-    "npm": "6.11.2"
-  },
   "scripts": {
     "ng": "ng",
-    "start": "node server.js",
+    "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"    
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.0.0-next.8",
-    "@angular/cli": "^8.3.17",
     "@angular/common": "~9.0.0-next.8",
     "@angular/compiler": "~9.0.0-next.8",
-    "@angular/compiler-cli": "^9.0.0-rc.0",
     "@angular/core": "~9.0.0-next.8",
     "@angular/forms": "~9.0.0-next.8",
     "@angular/platform-browser": "~9.0.0-next.8",
     "@angular/platform-browser-dynamic": "~9.0.0-next.8",
     "@angular/router": "~9.0.0-next.8",
-    "express": "^4.17.1",
     "jquery": "^3.4.1",
-    "path": "^0.12.7",
     "rxjs": "~6.5.3",
     "tslib": "^1.10.0",
-    "typescript": "~3.5.3",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.0-next.6",
-    "@angular/cli": "^8.3.17",
-    "@angular/compiler-cli": "^9.0.0-rc.0",
+    "@angular/cli": "~9.0.0-next.6",
+    "@angular/compiler-cli": "~9.0.0-next.8",
     "@angular/language-service": "~9.0.0-next.8",
+    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.4.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
     "codelyzer": "^5.1.0",
-    "enhanced-resolve": "^3.3.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.2.0",
